# VideoSuperResolution

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: _bootstrap.py  bench_throughput.py  color_eval.py  estimate_cost.py  fetch_clips.py  make_sidebyside.py  onprem_realesrgan.py  prep_eval.py  report.py  run_eval.py  serve_batch.py  serve_seedvr2.py  webui.py
src/video_super_resolution/: config.py  cost.py  degrade.py  media.py
src/video_super_resolution/local/: __init__.py  provider.py  realesrgan_worker.py  seedvr2_worker.py  weights.py
src/video_super_resolution/metrics/: temporal.py
src/video_super_resolution/postprocess/: __init__.py  color_match.py  delta_e.py
src/video_super_resolution/providers/: __init__.py  _fal.py  base.py  mock.py  realesrgan.py  seedvr2.py  topaz.py
src/video_super_resolution/serving/: __init__.py  assembler.py  batch.py  calibrate.py  capacity.py  queue.py  realesrgan_batch.py  scheduler.py  seedvr2_batch.py  seedvr2_comfy.py  source.py  unit.py
src/video_super_resolution/webui/: __init__.py  pipeline.py
tests/: test_edge_cases.py  test_local.py  test_serving.py  test_webui.py
