[project]
name = "video-super-resolution"
version = "0.1.0"
description = "Neural video super resolution with self-hosted batching and color post-processing"
requires-python = ">=3.11,<3.13"
dependencies = [
    "msgspec>=0.18",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Heavy, pulled only when actually scoring (kept out of the base install).
metrics = [
    "torch>=2.2",
    "torchvision>=0.17",
    "pyiqa>=0.1.13",
    "pandas>=2.0",
    "matplotlib>=3.8",
]
# fal inference client. Installing it does NOT spend credits; only calling endpoints does.
fal = [
    "fal-client>=0.5",
]
dev = ["ruff>=0.5", "pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_super_resolution"]

[tool.ruff]
line-length = 100
target-version = "py312"
